--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-* {                     /* applies to every element on the page */
+* {
+    /* applies to every element on the page */
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
@@ -10,29 +11,33 @@
     background-size: cover;
 }
 
-.btn_one {
+.btn_one i {
     color: white;
     font-size: 30px;
     font-weight: 700;
     position: absolute;
     left: 16px;
     line-height: 60px;
+    cursor: pointer;
+    transition: all 0.3s ease-in;
 }
 
 .sidebar_menu {
     position: fixed;
-    /* left: -300px; */
+    left: -300px;
     height: 100vh;
     width: 300px;
     background-color: rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 6px rgba(255, 255, 255, 0.5);
+    transition: all 0.3s linear;
 }
 
 .sidebar_menu .logo {
     position: absolute;
     width: 100%;
     line-height: 60px;
-    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+    height: 60px;
+    box-shadow: 0 2px 4px rgba(255, 255, 255, 0.5);
 }
 
 .sidebar_menu .logo a {
@@ -44,14 +49,17 @@
     font-weight: 500;
 }
 
-.sidebar_menu .btn_two {
+.sidebar_menu .btn_two i {
     color: gray;
     font-size: 25px;
     line-height: 60px;
     position: absolute;
     left: 275px;
     opacity: 0;
+    cursor: pointer;
+    transition: all 0.3s linear;
 }
+
 
 .sidebar_menu .menu {
     position: absolute;
@@ -64,7 +72,8 @@
     padding: 14px 20px;
 }
 
-.sidebar_menu .menu i,a {
+.sidebar_menu .menu i,
+a {
     color: white;
     text-decoration: none;
     font-size: 20px;
@@ -88,4 +97,33 @@
 
 #check {
     display: none;
+}
+
+.sidebar_menu .menu li:hover {
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+}
+
+.btn_one i:hover {
+    font-size: 40px;
+}
+
+.btn_two i:hover {
+    font-size: 30px;
+}
+
+.sidebar_menu .social_media i:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+#check:checked~.sidebar_menu {
+    left: 0;
+}
+
+#check:checked~.btn_one i {
+    display: none;
+}
+
+#check:checked~.sidebar_menu .btn_two i {
+    opacity: 1;
 }
